<resources>
    <string name="app_name">time table</string>
    <string-array name="student">
    <item> BCA (Cyber Security) </item>
    <item> BCA (Data Science)</item>
    <item> BCA (Artificial Intelligence and Machine Learning)</item>
    <item> BCA (AR and VR)</item>
    <item> BSc (Computer Science)</item>
    <item> BSc (Mathematics) </item>
    <item> BSc ( Physics ) </item>
    <item> BSc </item>
    <item> MSc (Data Science)</item>
    <item> MSc (Cyber Security)</item>
    <item> MCA (AI and ML)</item>
    <item> MCA </item>
    <item>B.TECH</item>
    <item>B.E</item>
    <item>BBA</item>
    <item>B.Arch</item>
    <item>BJMC</item>
    <item>BDS</item>
    <item>MBBS</item>
    <item>B.Com</item>
    <item>CA</item>
    <item> BA LLB</item>
    <item>LLB</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="timetable">Time Table </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account">Create new Account</string>
    <string name="accountlogin">Log-In your account</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone </string>
    <string name="password">Password </string>
    <string name="here">Already Registered? Login Here </string>
    <string name="nothere">New Here? Create Account </string>
    <string name="home">Return to Home</string>
</resources>